# kiv-pd-vtpbuddy

./: .gitignore  CMakeLists.txt  README.md
ctl-src/: general.h  main.cpp
misc/: vtpbuddy.cfg  vtpbuddy.service
src/: AdvertRequestPacket.cpp  AdvertRequestPacket.h  CMConfigurationGenerator.cpp  CMConfigurationLoader.cpp  Config.cpp  Config.h  ConfigurationGenerator.h  ConfigurationLoader.h  ConfigurationShared.cpp  Connection.cpp  Connection.h  Constants.hpp  CtlCommunicator.cpp  CtlCommunicator.h  CtlResponseBuilder.cpp  DelayWorkThread.cpp  DelayWorkThread.h  Domain.cpp  Domain.h  DomainMgr.cpp  DomainMgr.h  Dot1QEncaps.cpp  Encapsulation.h  Enums.h  EthernetEncaps.cpp  EthernetHeader.cpp  EthernetHeader.h  EthernetStructs.h  FileUtility.cpp  FileUtility.hpp  GITVersioning.cpp  Network.cpp  Network.h  PacketHandler.cpp  PacketHandler.h  PacketReceiving.cpp  PacketReceiving.hpp  ReceivedPacketHandling.cpp  ReceivedPacketHandling.hpp  RuntimeGlobals.cpp  (+27 more)
win/: .gitignore  kiv-pd-vtpbuddy.sln
win/kiv-pd-vtpbuddy/: kiv-pd-vtpbuddy.vcxproj  kiv-pd-vtpbuddy.vcxproj.filters
